# nba-player-stats

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: main_nbaplayerstats.yml
config/: database.py
models/: player.py  player_gamelog.py
routes/: player_gamelogs.py  players.py
schemas/: serialize_player_gamelogs.py  serialize_players.py
services/: fetch_nba_players.py  test.py  webscrape_gamelogs.py
utils/: get_nba_player_category_rankings.py  get_nba_player_points_rankings.py  get_nba_player_season_projections.py  get_nba_player_season_totals.py
