[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["StephenFeddes <feddessteve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app"
